--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>$71.00</p>
             </div><!---merch items6-->
             <div class="merch-items">
-                <img src="assets/images/merch-img7.jpg" alt="">
+                <img src="assets/images/merch-img7 (1).jpg" alt="">
                 <h3>Freshly Picked</h3>
                 <span>*****</span>
                 <p>$71.00</p>
@@ -180,10 +180,10 @@
         <form action="#">
             <div class="form-group">
                 <label for="full-name">Full Name</label>
-                <input type="text" name="fullname" id="full-name" placeholder="last name, first name" required>
+                <input type="text" name="full-name" id="full-name" placeholder="last name, first name" required>
                 <label for="email">Email Address</label>
                 <input type="email" name="email" id="email" placeholder="mail@gmail.com" required>
-                <lable for="phone">Phone Number</lable>
+                <label for="phone">Phone Number</label>
                 <input type="tel" name="phone" id="phone" placeholder="(+63)098678908" required>
                 <p>Reservation Details</p>
                 <label for="guest-num">Number of Guest</label>
@@ -192,7 +192,7 @@
                     <option value="2person">2</option>
                     <option value="3person">3</option>
                     <option value="4person">4</option>
-                    <option value="morethan4">more than 4</option>
+                    <option value="more-than4">more than 4</option>
                 </select>
                 <label for="res-date">Reservation Date</label>
                 <input type="date" name="res_date" id="res-date" required>
@@ -312,8 +312,7 @@
   <a href="http://www.twitter.com"><img src="assets/images/icon-tw.png" alt="twitter icon"></a>
 </div>
 <div class="social-widgets">
-
-<p>©️2021| Kredo IT Abroad</p>
+  <p>©️2021| Kredo IT Abroad</p>
 </div>
 </div><!--footer-social-->
 </div><!--End of Wrapper-->
